# hybridacc-torchsim

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
design/hybridacc-ESL/: Architecture.md  CMakeLists.txt  README.md  addone.vcd  tb_utils
design/hybridacc-ESL/cmake/: FindSystemC.cmake
design/hybridacc-ESL/cmake/toolchains/: gcc.cmake
design/hybridacc-ESL/config/: params.yaml  platform.json
design/hybridacc-ESL/doc/: AGU.html  BankedScratchpad.html  Components.md  ComputeCluster.html  ComputeCluster.md  Core.html  Core.md  CoreController.md  CoreControllerRTL.md  HDDU.html  HDDU.md  HaccElfManifestLoader.md  HybridAcc.md  HybridDataDeliverUnit.md  NetworkOnChip.md  NoC_optimization.md  PE_SDMA.md  ProcessElement.md  SPM.md  coding_convention.md  core_implement_report.md  index.md  native_cmd_fastpath_resume.md
design/hybridacc-ESL/doc/component/: AGU.md  Components.md  ComputeCluster.md  Core.md  DMA.md  HDDU.md  HybridAcc.md  NetworkOnChip.md  PE_SDMA.md  ProcessElement.md  README.md  SPM.md  SRAM.md  cluster_gen.md  coding_convention.md
design/hybridacc-ESL/doc/guide/: DeveloperGuide.md  README.md  UserGuide.md  legacy_DeveloperGuide.md  legacy_UserGuide.md
design/hybridacc-ESL/doc/report/: README.md  firmware_profiling_note.md  report_firmware_test_coverage.md  report_progress_status.md  report_scan_chain_agu_diff.md  report_simulation_analysis.md  report_simulation_analysis_final.md  report_simulation_hang_analysis.md  utilization profile report.md
design/hybridacc-ESL/docs/: architecture.md  pe_components.html
design/hybridacc-ESL/firmware/include/: hacc_core_regs.h
design/hybridacc-ESL/include/hybridacc/: DMA.hpp  hybridacc.hpp  topcontroller.hpp  utils.hpp
design/hybridacc-ESL/include/hybridacc/array/: DLB.hpp  array.hpp  subcontroller.hpp
design/hybridacc-ESL/include/hybridacc/noc/: multicast.hpp  noc.hpp  xbus.hpp  ybus.hpp
design/hybridacc-ESL/include/hybridacc/nonlinear/: nonlinear.hpp
design/hybridacc-ESL/include/hybridacc/pe/: DataLoader.hpp  DataMemory.hpp  Decoder.hpp  InstLoader.hpp  InstMemory.hpp  Loopstack.hpp  PortIO.hpp  Pregfile.hpp  Router.hpp  Tregfile.hpp  VADD.hpp  VALU.hpp  VMUL.hpp  controller.hpp  loopstack.hpp  pe.hpp
design/hybridacc-ESL/plan/: Format_Implementation_Guide.md  core_ISA.md  core_ISA_HACC.md  core_ISA_compare.md  core_ISA_rv32I.md  core_ISA_v2.md  plan.md
design/hybridacc-ESL/script/: noc_sim.sh
design/hybridacc-ESL/scripts/: gen_pe_io_html.py  run_sim.sh  setup_systemc.sh
design/hybridacc-ESL/simulator/: CMakeLists.txt
design/hybridacc-ESL/simulator/include/: ComputeCluster.hpp  Core.hpp  FIFO.hpp  HybridAcc.hpp  NetworkOnChip.hpp  ProcessElement.hpp  SimUtils.hpp  async_FIFO.hpp  utils.hpp
design/hybridacc-ESL/simulator/include/AXI4_lite/: axi4-lite.hpp
design/hybridacc-ESL/simulator/include/Cluster/: AddressGenerateUnit.hpp  BankedScratchpad.hpp  ClusterControlUnit.hpp  ControlTypes.hpp  HybridDataDeliverUnit.hpp  SRAM.hpp  ScratchpadMemory.hpp
design/hybridacc-ESL/simulator/include/Core/: BootHostIf.hpp  ClusterDataFabric.hpp  CmdFabric.hpp  CmdToAhbBridge.hpp  ComputeClusterBusAdapter.hpp  CoreController.hpp  CoreLocalIrq.hpp  CoreMcu.hpp  DataSram.hpp  DecodeStage.hpp  DescriptorSram.hpp  DmaEngine.hpp  ExecuteStage.hpp  FetchStage.hpp  IrqRouter.hpp  Isram.hpp  MemoryStage.hpp  PipelineTypes.hpp  Plic.hpp  SectionLoader.hpp  Types.hpp  WritebackStage.hpp
design/hybridacc-ESL/simulator/include/NoC/: MBUS.hpp  NoCRouter.hpp
design/hybridacc-ESL/simulator/include/PE/: DataLoader.hpp  DataMemory.hpp  Decoder.hpp  EXE_A_stage.hpp  EXE_M_stage.hpp  IF_ID_stage.hpp  InstructionMemory.hpp  LDMA.hpp  LoopController.hpp  PErouter.hpp  PsumRegFile.hpp  SDMA.hpp  TransformRegFile.hpp  (+2 more)
design/hybridacc-ESL/simulator/src/: main.cpp  utils.cpp
design/hybridacc-ESL/src/: DLB.cpp  DMA.cpp  DataLoader.cpp  array.cpp  controller.cpp  hybridacc.cpp  noc.cpp  pe.cpp  subcontroller.cpp  top.cpp  topcontroller.cpp  xbus.cpp  ybus.cpp
design/hybridacc-ESL/tb/: dataloader_tb.cpp  main_tb.cpp  utils_tb.cpp
design/hybridacc-ESL/test/: CMakeLists.txt  README.md  core_tb_utils.hpp  mvp_compiler.hpp  pe_wrapper.cpp  pe_wrapper.hpp  run.sh  run_conv3x3_sim.sh  tb_utils.hpp  test_agu_unit.cpp  test_cluster_control_unit.cpp  test_cluster_sim.cpp  test_cluster_sim_advanced.cpp  test_cluster_sim_backup.cpp  test_cluster_unit.cpp  test_core_mcu_sim.cpp  test_core_sim.cpp  test_hddu_unit.cpp  test_noc_sim.cpp  test_noc_unit.cpp  test_pe_sim.cpp  test_pe_unit.cpp  test_spm_unit.cpp  test_sram.cpp  test_sram_unit.cpp
design/hybridacc-ESL/test/build-core-rv32i/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_core_controller_integration  test_core_unit
design/hybridacc-ESL/test/core_unit_tests/: test_core_controller_integration.cpp  test_core_unit.cpp
design/hybridacc-ESL/test/firmware/: Makefile
design/hybridacc-pe-isa/: CMakeLists.txt  README.md
design/hybridacc-pe-isa/asm/: conv1d_k1.asm  conv1d_k3.asm  conv1d_k5.asm  conv1d_k7.asm  conv1d_simple copy.asm  gemv.asm
design/hybridacc-pe-isa/asm/template/: conv1d_k1s1.asm  conv1d_k3s1.asm  conv1d_k5s1.asm  conv1d_k7s1.asm  gemv_template.asm
design/hybridacc-pe-isa/doc/: HybridaccPE.md  ISA.html  ISA.md  ToolUsage.md  log.md
design/hybridacc-pe-isa/src/assambler/: CMakeLists.txt  ha_asm.cpp  ha_objdump.cpp  instruction.cpp  instruction.hpp  utils.cpp  utils.hpp
design/hybridacc-pe-isa/src/packager/: CMakeLists.txt  ha-package.cpp  package.cpp  package.hpp
design/hybridacc-pe-isa/src/simulator/: CMakeLists.txt  component.cpp  component.hpp  main.cpp  simulator.cpp  simulator.hpp
design/hybridacc-pe-isa/tests/: CMakeLists.txt  test_assembler.cpp
design/hybridacc-pe-isa/tools/script/: compile_template.sh  package.sh  sim.sh  verify_sim.sh
design/test-visual/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  counter.h  counter_gui.py  counter_test.cpp  counter_wrapper.cpp  test_counter_python.py
python/trace_parser/: README.md  __init__.py  analyze_trace.py  cli.py  parser.py  pyproject.toml  utils.py
(+672 files in other folders)
