[project]
name = "hybridacc_tools"
version = "0.1.0"
description = "Verification tools for HybridAcc"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "torch",
    "pyyaml",
    "pandas>=2.0.3",
    "matplotlib>=3.7.5",
    "textual>=0.70.0",
]

[project.scripts]
log-parser = "log_parser.cli:main"
trace-parser = "trace_parser.cli:main"

[tool.setuptools.packages.find]
where = ["./python"]
include = ["hybridacc_verify*", "trace_parser*", "log_parser*"]
