[project]
name = "hybridacc_tools"
version = "0.1.0"
description = "Verification tools for HybridAcc"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "torch",
    "pyyaml",
    "pandas>=2.0.3",
    "matplotlib>=3.7.5",
    "textual>=0.70.0",
    "pyelftools>=0.32",
    "tqdm>=4.67.3",
]

[project.scripts]
log-parser = "log_parser.cli:main"
trace-parser = "trace_parser.cli:main"
hacc = "hacc.cli:main"
hacc-elfdump = "hacc.elfdump:main"

[tool.setuptools.packages.find]
where = ["./python", "./design/HACC"]
include = ["hybridacc_verify*", "trace_parser*", "log_parser*", "hacc*"]
