[project]
name = "hybridacc_tools"
version = "0.1.0"
description = "Verification tools for HybridAcc"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "torch",
    "pyyaml",
    "jinja2>=3.1",
    "pandas>=2.0.3",
    "matplotlib>=3.7.5",
    "textual>=0.70.0",
    "pyelftools>=0.32",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[project.scripts]
log-parser = "log_parser.cli:main"
trace-parser = "trace_parser.cli:main"
hacc-compile = "hybridacc_cc.cli:main"
hacc-setup = "hybridacc_cc.setup_cli:main"
hacc-sweep = "hybridacc_cc.sweep_tools:main"

[tool.setuptools.packages.find]
where = ["./python"]
include = ["hybridacc_verify*", "trace_parser*", "log_parser*", "hybridacc_cc*"]
