[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hybridacc-trace-parser"
version = "0.1.0"
description = "Standalone trace parser utilities for HybridAcc traces"
authors = [ { name = "HybridAcc" } ]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

[project.scripts]
trace-parser = "trace_parser.cli:main"
